--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -9,6 +9,11 @@ requirements = []
 path = 'contracts/peer-review.clar'
 clarity_version = 2
 epoch = 2.5
+
+[contracts.research-nft]
+path = 'contracts/research-nft.clar'
+clarity_version = 2
+epoch = 2.5
 [repl.analysis]
 passes = ['check_checker']
 
