--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -14,6 +14,11 @@ epoch = 2.5
 path = 'contracts/research-nft.clar'
 clarity_version = 2
 epoch = 2.5
+
+[contracts.research-proposal]
+path = 'contracts/research-proposal.clar'
+clarity_version = 2
+epoch = 2.5
 [repl.analysis]
 passes = ['check_checker']
 
